--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="金鷹國際鈦金（香港）有限公司">
+  <meta name="description" content="金鷹國際鈦金（香港）有限公司, 真空镀膜专家">
   <link rel="icon" href="%PUBLIC_URL%/logo.svg">
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.svg">
-  <title>金鷹國際鈦金（香港）有限公司</title>
+  <title>金鷹國際鈦金（香港）有限公司 - 真空镀膜专家</title>
 </head>
-<body>
+<body class="has-animations">
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
 </body>
